crates/toml/tests/snapshots/invalid/array/text-before-array-separator.stderr
TOML parse error at line 2, column 46
  |
2 |   "Is there life before an array separator?" No,
  |                                              ^
missing comma between array elements, expected `,`

---
TOML parse error at line 2, column 46
  |
2 |   "Is there life before an array separator?" No,
  |                                              ^^
invalid float, expected `nan`
